added nav styles

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Rescue Point</title>
 </head>
 <body>
-    
+    <nav>
+        <div>
+            <img src="assets/logo.png" alt="">
+            <h5>Emergency Service</h5>
+        </div>
+    </nav>
 </body>
 </html>
