added navber styles

--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rescue Point</title>
+    <link rel="stylesheet" href="styles/style">
 </head>
+
 <body>
-    <nav>
-        <div>
-            <img src="assets/logo.png" alt="">
-            <h5>Emergency Service</h5>
-        </div>
-    </nav>
+    <header>
+        <nav>
+            <div class="navber">
+                <img src="assets/logo.png" alt="">
+                <h5>Emergency Service</h5>
+            </div>
+        </nav>
+    </header>
+
 </body>
+
 </html>
