added nav styles

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
                 <img src="assets/logo.png" alt="">
                 <h5>Emergency Service</h5>
             </div>
+            <div>
+                <li>0</li>
+                <li>100</li>
+                <button>2 Copy</button>
+            </div>
         </nav>
     </header>
 
