added banner styles

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <header>
+        <!-- nav section  -->
         <nav>
             <div class="navber">
                 <img src="assets/logo.png" alt="">
@@ -21,6 +22,10 @@
                 <button>2 Copy</button>
             </div>
         </nav>
+        <!-- banner section  -->
+         <div>
+            <img src="assets/logo.png" alt="">
+         </div>
     </header>
 
 </body>
