added banner h2 styles

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <!-- banner section  -->
          <div>
             <img src="assets/logo.png" alt="">
+            <h2>Emergency Service Directory</h2>
          </div>
     </header>
 
