added banner h6 styles

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
          <div>
             <img src="assets/logo.png" alt="">
             <h2>Emergency Service Directory</h2>
+            <h5>Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</h5>
          </div>
     </header>
 
