added main style

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rescue Point</title>
-    <link rel="stylesheet" href="styles/style">
+   <link rel="stylesheet" href="styles/style">
 </head>
 
 <body>
@@ -29,6 +29,10 @@
             <h5>Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</h5>
          </div>
     </header>
+
+    <main>
+        
+    </main>
 
 </body>
 
