--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rescue Point</title>
-   <link rel="stylesheet" href="styles/style">
+   <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
