added main img styles

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rescue Point</title>
-   <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -23,15 +23,19 @@
             </div>
         </nav>
         <!-- banner section  -->
-         <div>
+        <div>
             <img src="assets/logo.png" alt="">
             <h2>Emergency Service Directory</h2>
-            <h5>Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</h5>
-         </div>
+            <h5>Government Emergency Services at Your Fingertip – A Project by Government of the People’s Republic of
+                Bangladesh</h5>
+        </div>
     </header>
 
     <main>
-        <img src="" alt="">
+        <div>
+            <img src="assets/emergency.png" alt="">
+            <img src="assets/heart.png" alt="">
+        </div>
     </main>
 
 </body>
