added main h3  styles

--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
     </header>
 
     <main>
-        <div>
+        <div class="emergency">
             <img src="assets/emergency.png" alt="">
             <img src="assets/heart.png" alt="">
+            <h2>National Emergency Number</h2>
         </div>
     </main>
 
