added main h6 styles

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         <div>
             <img src="assets/logo.png" alt="">
             <h2>Emergency Service Directory</h2>
-            <h5>Government Emergency Services at Your Fingertip – A Project by Government of the People’s Republic of
-                Bangladesh</h5>
+            <h3>Government Emergency Services at Your Fingertip – A Project by Government of the People’s Republic of
+                Bangladesh</h3>
+                <h6>National Emergency</h6>
         </div>
     </header>
 
