--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <img src="assets/heart.png" alt="">
             <h2>National Emergency Number</h2>
             <h6>National Emergency</h6>
+            <button>All</button>
         </div>
     </main>
 
