--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </nav>
         <!-- banner section  -->
-        <div>
+        <div class="banner">
             <img src="assets/logo.png" alt="">
             <h2>Emergency Service Directory</h2>
             <h3>Government Emergency Services at Your Fingertip – A Project by Government of the People’s Republic of
