added button section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <h2>National Emergency Number</h2>
             <h6>National Emergency</h6>
             <button>All</button>
+            <button>Copy</button>
         </div>
     </main>
 
