added call button section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <h6>National Emergency</h6>
             <button>All</button>
             <button>Copy</button>
+            <button>Call</button>
         </div>
     </main>
 
