added card section

--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
             <button>Copy</button>
             <button> Call</button>
         </div>
+           <div class="emergency">
+            <img src="assets/emergency.png" alt="">
+            <img src="assets/heart.png" alt="">
+            <h2>National Emergency Number</h2>
+            <h6>National Emergency</h6>
+            <button>All</button>
+            <button>Copy</button>
+            <button> Call</button>
+        </div>
     </main>
 
 </body>
