added header section

--- a/index.html
+++ b/index.html
@@ -9,50 +9,11 @@
 </head>
 
 <body>
-    <header>
-        <!-- nav section  -->
-        <nav>
-            <div class="navber">
-                <img src="assets/logo.png" alt="">
-                <h5>Emergency Service</h5>
-            </div>
-            <div>
-                <li>0</li>
-                <li>100</li>
-                <button>2 Copy</button>
-            </div>
-        </nav>
-        <!-- banner section  -->
-        <div class="banner">
-            <img src="assets/logo.png" alt="">
-            <h2>Emergency Service Directory</h2>
-            <h3>Government Emergency Services at Your Fingertip – A Project by Government of the People’s Republic of
-                Bangladesh</h3>
+    <!-- header section  -->
+ <header>
 
-        </div>
-    </header>
-
-    <main>
-        <div class="emergency">
-            <img src="assets/emergency.png" alt="">
-            <img src="assets/heart.png" alt="">
-            <h2>National Emergency Number</h2>
-            <h6>National Emergency</h6>
-            <button>All</button>
-            <button>Copy</button>
-            <button> Call</button>
-        </div>
-           <div class="emergency">
-            <img src="assets/emergency.png" alt="">
-            <img src="assets/heart.png" alt="">
-            <h2>National Emergency Number</h2>
-            <h6>National Emergency</h6>
-            <button>All</button>
-            <button>Copy</button>
-            <button> Call</button>
-        </div>
-    </main>
-
+ </header>
+   
 </body>
 
 </html>
