added nav section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <!-- header section  -->
  <header>
-
+<!-- nav section  -->
+ <img src="assets/logo.png" alt="">
+ <h3>Emergency <br>Service </h3>
  </header>
    
 </body>
