added navber section

--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
 
 <body>
     <!-- header section  -->
- <header>
-<!-- nav section  -->
- <img src="assets/logo.png" alt="">
- <h3>Emergency <br>Service </h3>
- </header>
-   
+    <header>
+        <!-- nav section  -->
+        <div>
+            <img src="assets/logo.png" alt="">
+            <h3>Emergency <br>Service </h3>
+        </div>
+        <div>
+            
+        </div>
+    </header>
+
 </body>
 
 </html>
