added navber section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <h3>Emergency <br>Service </h3>
         </div>
         <div>
-            
+        <li>0</li>
+        <li>100</li>
+        <button>2 Copy</button>
         </div>
     </header>
 
