added navber section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- header section  -->
     <header>
         <!-- nav section  -->
-        <div>
+        <div class="navber">
             <img src="assets/logo.png" alt="">
             <h3>Emergency <br>Service </h3>
         </div>
