added navber section

--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
     <!-- header section  -->
     <header>
         <!-- nav section  -->
-        <div class="navber">
-            <img src="assets/logo.png" alt="">
-            <h3>Emergency <br>Service </h3>
-        </div>
-        <div>
-        <li>0</li>
-        <li>100</li>
-        <button>2 Copy</button>
-        </div>
+        <section class="navber">
+            <div>
+                <img src="assets/logo.png" alt="">
+                <h3>Emergency <br>Service </h3>
+            </div>
+            <div>
+                <li>0</li>
+                <li>100</li>
+                <button>2 Copy</button>
+            </div>
+        </section>
     </header>
 
 </body>
